# cvm-demo

./: .coverage  .dependency-cruiser.cjs  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yml  eslint.config.mjs  knip.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  semgrep.yml  tsconfig.base.json
.githooks/: post-checkout  pre-commit  pre-push  reference-transaction
.github/: CODEOWNERS
.github/actions/setup-ci-env/: action.yml
.github/compose/: ci-cache.override.yml
.github/workflows/: build-verify.yml  nightly-regression.yml  validate.yml
apps/web-console/: angular.json  package.json
apps/web-console/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts  platform-api.service.ts
apps/web-console/src/app/features/agents/: agents.page.ts
apps/web-console/src/app/features/cases/: cases.page.ts
apps/web-console/src/app/features/evals/: evals.page.ts
apps/web-console/src/app/features/ops/: ops.page.ts
apps/web-evals/: angular.json  package.json
apps/web-evals/public/: runtime-config.js
apps/web-evals/src/: index.html  styles.css
apps/web-evals/src/app/: app.css  app.html  app.routes.ts  app.spec.ts  app.ts
apps/web-evals/src/app/features/evals/: evals.page.ts
apps/web-ops/: README.md  angular.json  package.json  tsconfig.app.json
apps/web-ops/src/: index.html  main.ts
apps/web-ops/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
apps/web-ops/src/app/features/ops/: ops.page.ts
apps/web-user/: angular.json  package.json  proxy.conf.json  tsconfig.spec.json
apps/web-user/src/: index.html  styles.css
apps/web-user/src/app/: app.css  app.html  app.routes.ts  app.spec.ts  app.ts
apps/web-user/src/app/features/cases/: cases.page.ts
apps/web-user/src/app/features/shortlist/: shortlist.page.css  shortlist.page.html  shortlist.page.spec.ts  shortlist.page.ts
contracts/asyncapi/: platform-events.asyncapi.yaml
contracts/openapi/: platform-api.openapi.yaml
docs/: 00-INDEX.md
docs/ARCHITECTURE/: context-map.md
docs/CONTRACTS/: index.md
docs/EVALS/: index.md
docs/EXEC-PLANS/active/: bootstrap-plan.md  ci-pipeline-hardening-plan.md  dependency-governance-plan.md  hard-harness-plan.md  langfuse-full-fidelity-trace-plan.md  mvp-agent-minimum-loop-plan.md  mvp-slice-01-governance-plan.md  mvp-slice-02-jd-kw-agent-run-plan.md  mvp-slice-02-jd-kw-searchrun-plan.md  mvp-slice-03-list-detail-verdict-plan.md  mvp-slice-04-export-audit-ops-plan.md  mvp-slice-05-harness-evals-gates-plan.md  pydantic-ai-temporal-migration-plan.md  runtime-mode-hardening-plan.md
docs/EXEC-PLANS/completed/: bootstrap-plan.md  ci-pipeline-hardening-plan.md  dependency-governance-plan.md  hard-harness-plan.md  mvp-slice-01-governance-plan.md
docs/EXEC-PLANS/templates/: mvp-slice-template.md
docs/OBSERVABILITY/: index.md
docs/PRODUCT/: requirement-traceability.md  requirements.md
docs/_generated/: asyncapi-platform-events.md  external-cts.md  openapi-platform-api.md
infra/docker/: angular-web.Dockerfile  nginx-spa.conf  python-app.Dockerfile  render-runtime-config.sh
libs/py/contracts-generated/: pyproject.toml
libs/py/contracts-generated/src/cvm_contracts_generated/: __init__.py  platform_api.py
libs/py/domain-kernel/: pyproject.toml
libs/py/domain-kernel/src/cvm_domain_kernel/: __init__.py
libs/py/testkit/: pyproject.toml
libs/py/testkit/src/cvm_testkit/: __init__.py  integration.py
libs/ts/api-client-generated/: package.json
libs/ts/api-client-generated/src/: index.ts
libs/ts/platform-api-client/: package.json  tsconfig.json
libs/ts/platform-api-client/src/: index.ts  platform-api.service.ts
ontology/core/: day0.ttl
ontology/shapes/: day0.shacl.ttl
services/eval-runner/: pyproject.toml
services/eval-runner/src/cvm_eval_runner/: cli.py
services/platform-api/: pyproject.toml
services/platform-api/src/cvm_platform/: __init__.py  main.py
services/platform-api/src/cvm_platform/api/: __init__.py  dependencies.py  openapi_contract.py  request_models.py  routes.py
services/platform-api/src/cvm_platform/application/: agent_runs.py  agent_tracing.py  dto.py  policies.py  ports.py  runtime.py  service.py
services/platform-api/src/cvm_platform/domain/: errors.py  ports.py  types.py
services/platform-api/src/cvm_platform/infrastructure/: adapters.py  agent_tracing.py  boundary_models.py  db.py  mock_catalog.py  models.py  service_factory.py  sqlalchemy_uow.py  temporal_diagnostics.py
services/platform-api/src/cvm_platform/settings/: config.py
services/temporal-worker/: pyproject.toml
services/temporal-worker/src/cvm_worker/: activities.py  agents.py  execution.py  main.py  models.py  workflows.py
tests/: conftest.py  test_api_contract_schemathesis.py  test_api_error_contracts.py  test_api_flow.py  test_api_stack.py  test_eval_runner.py  test_openai_adapter.py  test_sqlalchemy_uow.py
tests/support/: api_harness.py  flow.py
tests/unit/: test_adapters_runtime.py  test_agent_runs.py  test_agent_tracing.py  test_application_agent_tracing.py  test_hardgate_properties.py  test_main_app.py  test_platform_bootstrap.py  test_platform_service.py  test_support_modules.py  test_temporal_visibility_smoke.py  test_temporal_worker.py
tools/bootstrap/: cleanup_exports.py  dev-down.sh  dev-status.sh  dev-up.sh  print-endpoints.sh  write-runtime-config.sh
tools/ci/: check_architecture.py  check_contracts.py  check_forbidden_runtime_artifacts.py  check_generated_clean.py  check_links.py  check_local_stack_ready.py  collect_compose_diagnostics.sh  run_basedpyright.py  run_eval_gate.sh  with_deterministic_stack.sh  with_test_postgres.sh
tools/codegen/: generate_all.py
tools/smoke/: temporal_visibility_smoke.py
