[project]
name = "cvm-demo"
version = "0.1.0"
description = "Local-first AI-native harness MVP"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "cvm-platform-api",
  "cvm-temporal-worker",
  "cvm-eval-runner",
]

[dependency-groups]
dev = [
  "basedpyright>=1.34,<1.35",
  "datamodel-code-generator>=0.55,<0.56",
  "httpx>=0.28,<0.29",
  "hypothesis>=6.142,<7",
  "pre-commit>=4.3,<5",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "pyyaml>=6,<7",
  "ruff>=0.15,<0.16",
  "schemathesis>=4.5,<5",
  "semgrep>=1.119,<2",
  "tach>=0.34,<0.35",
]

[tool.uv.sources]
cvm-platform-api = { workspace = true }
cvm-temporal-worker = { workspace = true }
cvm-eval-runner = { workspace = true }
cvm-contracts-generated = { workspace = true }
cvm-domain-kernel = { workspace = true }
cvm-testkit = { workspace = true }

[tool.uv.workspace]
members = [
  "services/platform-api",
  "services/temporal-worker",
  "services/eval-runner",
  "libs/py/contracts-generated",
  "libs/py/domain-kernel",
  "libs/py/testkit",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "stack: requires the docker-compose-backed local stack",
]
pythonpath = [
  "services/platform-api/src",
  "services/temporal-worker/src",
  "services/eval-runner/src",
  "libs/py/contracts-generated/src",
  "libs/py/domain-kernel/src",
  "libs/py/testkit/src",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
branch = true
source = [
  "services/platform-api/src/cvm_platform",
  "services/temporal-worker/src/cvm_worker",
  "services/eval-runner/src/cvm_eval_runner",
  "libs/py/domain-kernel/src/cvm_domain_kernel",
  "libs/py/testkit/src/cvm_testkit",
]
omit = [
  "libs/py/contracts-generated/*",
  "docs/_generated/*",
  "tools/codegen/*",
]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_empty = true

[tool.tach]
exclude = [
  "**/*__pycache__",
  "**/*egg-info",
  "**/docs",
  "**/tests",
  "**/venv",
]
source_roots = [
  "services/platform-api/src",
  "services/temporal-worker/src",
  "services/eval-runner/src",
  "libs/py/contracts-generated/src",
  "libs/py/domain-kernel/src",
  "libs/py/testkit/src",
]
forbid_circular_dependencies = true
root_module = "ignore"

[[tool.tach.modules]]
path = "cvm_contracts_generated"
depends_on = []

[[tool.tach.modules]]
path = "cvm_domain_kernel"
depends_on = []

[[tool.tach.modules]]
path = "cvm_platform.settings"
depends_on = []

[[tool.tach.modules]]
path = "cvm_platform.domain"
depends_on = ["cvm_domain_kernel"]

[[tool.tach.modules]]
path = "cvm_platform.application"
depends_on = [
  "cvm_platform.domain",
  "cvm_domain_kernel",
]

[[tool.tach.modules]]
path = "cvm_platform.infrastructure"
depends_on = [
  "cvm_platform.application",
  "cvm_platform.domain",
  "cvm_platform.settings",
  "cvm_domain_kernel",
]

[[tool.tach.modules]]
path = "cvm_platform.api"
depends_on = [
  "cvm_contracts_generated",
  "cvm_platform.application",
  "cvm_platform.domain",
  "cvm_platform.infrastructure",
  "cvm_platform.settings",
]

[[tool.tach.modules]]
path = "cvm_testkit"
depends_on = []

[[tool.tach.modules]]
path = "cvm_eval_runner"
depends_on = ["cvm_testkit"]

[[tool.tach.modules]]
path = "cvm_worker"
depends_on = [
  "cvm_platform.application",
  "cvm_platform.infrastructure",
  "cvm_platform.settings",
]

[tool.tach.external]
exclude = ["psycopg", "uvicorn"]
