[project]
name = "cvm-platform-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "cvm-contracts-generated",
  "cvm-domain-kernel",
  "fastapi>=0.116,<0.117",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.35,<0.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvm_platform"]
