[project]
name = "cvm-platform-api"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "cvm-contracts-generated",
  "cvm-domain-kernel",
  "fastapi>=0.135,<0.136",
  "httpx>=0.28,<0.29",
  "langfuse>=3.9,<4",
  "protobuf>=6.33,<7",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.13,<3",
  "psycopg[binary]>=3.3,<4",
  "pyyaml>=6,<7",
  "sqlalchemy>=2.0.48,<3",
  "temporalio>=1.24,<2",
  "uvicorn>=0.42,<0.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvm_platform"]
