[project]
name = "cvm-temporal-worker"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "cvm-domain-kernel",
  "cvm-platform-api",
  "openai>=2,<3",
  "pydantic>=2.12,<3",
  "pydantic-ai-slim[temporal]==1.72.0",
  "sqlalchemy>=2.0.48,<3",
  "temporalio==1.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvm_worker"]
